:bug: Fix wrap issue

--- a/frontend/src/components/FormPage.scss
+++ b/frontend/src/components/FormPage.scss
@@ -83,7 +83,9 @@
   }
 
   .half-width input {
-    width: 38%;
+    width: 30%;
+    padding-top: 4.5px;
+    padding-bottom: 4.5px;
   }
 
   .inline {
